pari/static/css/base.less
/* ... */
#push {
    height: @footerHeight;
}

#footer {
    height: @footerHeight;
    background-color: @navColor;
    .footer-row {
        text-align: center;
    }
    ul.footer-nav {
        display: inline-block;
        li {
            float: left;
            list-style: none;
            margin: 0 0.3em 0 0;
            padding: 0.2em;
            font-size: 1.1em;
            color: @headingsColor;
            a {
                color: @headingsColor;
            }
        }
    }
}

.horizontal-line {
    .horizontal-separator (100%, transparent, #ccc 50%, transparent);
    margin: 10px 0;
}

.full-horizontal-line {
    .horizontal-separator (100%, #ccc, #ccc, #ccc);
    margin: 8px 0;
}

.video-container, .embed-container {
    position: relative;
    padding-bottom: 56.25%;
    padding-top: 30px;
    height: 0;
    margin-bottom: 10px;
}

.embed-container-tall {
    padding-bottom: 100%;
}

.embed-container,
.video-container {
    iframe, object, embed {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
    }
}

.media-thumbnail {
    position: relative;

    img {
        opacity: 0.5;
    }

    a {
        text-decoration: none;
        color: black;

        i {
            font-size: 48px;
            position: absolute;

            &:hover {
                color: @headingsColor;
            }

            left: 50%;
            top: 50%;
            margin-left: -20.5px;
            margin-top: -24.5px;
        }
    }
}

.media-popup {
    @media(min-width: 979px){
        width: 760px;
        margin-left: -380px;
    }

    a {
        color: @headingsColor;
    }
}

.tag {
    background-color: #f5f5f5;
    padding: 4px;
    margin-left: 2px;
    margin-bottom: 2px;
    .border-radius(4px, 4px, 4px, 4px);
    a {
        color: @headingsColor;
    }
}

.type-filters-container {

    .view-all {
        float: left;
        padding-top: 20px;
        list-style-type: none;
        display: inline-block;
        color: #9C9C9C;
    }
}

.type-filters {

    display: inline-block;
    margin: 12px 0;

    width: 238px;
    height: 38px;
    overflow: hidden;
    float: left;
    .transition (1s, @property: width);

    &:before {
        content: 'Filter by:';
        color:  #333;
        line-height: 32px;
    };

    &.expanded {
        width: 100%;
        @media(max-width: 480px){
            height: auto;
        }
    }

    .type-filter {
        font-size: 24.5px;
        color: #9C9C9C;
        margin: 4px;
        list-style-type: none;
        display: inline-block;
        width: 32px;
        height: 32px;
        background-color: @alternateBgColor;
        text-align: center;
        line-height: 32px;

        .transition (.3s);
        .box-shadow (0 0 5px rgba(0,0,0,.3));
        .rounded (2px);
        &.active{
            color: @headingsColor;

            &:hover {
                color: #9C9C9C;
            }
        }

        &:hover {
            color: @headingsColor;
        }
    }
}

.social {
    margin: 8px 0;
    a {
        text-decoration: none;
        color: #FFFFFF;
    }

    .badge {
        color: #fff;
        font-size: 150%;
        .box-sizing (border-box);

        &.facebook {
            background-color: #3B5998;
        }

        &.twitter {
            background-color: #3498DB;
        }

        &.google-plus {
            background-color: #d34836;
        }

        &.comments {
            background-color: #3ac23a;
        }
    }
}

.mfp-img {
    box-shadow: none;
}

.list {
    .item {
        .box-sizing(border-box);
        padding: 10px;
        overflow: auto;

        &:nth-child(odd){
            background: @alternateBgColor;
        }

        .item-image {
            @media (min-width: 481px) {
                float: left;
            }

            @media (max-width: @screen-xs-max) {
                .media-thumbnail, .image-thumbnail {
                    img {
                        max-width: 100%;
                        display: block;
                        margin: 0 auto;
                    }
                }
            }

        }

        .caption {
            @media (min-width: 481px) {
                margin-left: 298px;
            }
            .box-sizing(border-box);

            h4 {
                a {
                    color: @headingsColor;
                }
            }
        }

        p {
            color: black;
        }

        span:first-child {
            margin: 10px;
        }

    }
}

.heading {
    h3 {
        .section-header;
    }

    .type-filters {
        margin-top: 10px;
    }
}

.section-header {
    .section-header;
}

.btn-colour {
    .buttonBackground (@headingsColor, lighten(@headingsColor, 10%));
}

.btn-grey {
    .buttonBackground (#444, #222)
}

.recaptchatable {
        line-height: 12px;
}
/* ... */

